Cohere embedding refactoring done. Reduced time by 9 times.

--- a/main.ipynb
+++ b/main.ipynb
@@ -127,66 +127,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To check if the collection is already available. Done"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reviews = vx.get_or_create_collection(name=\"reviews\", dimension=384)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The collection exists!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import psycopg2\n",
-    "\n",
-    "# Establish connection to the PostgreSQL database\n",
-    "conn = psycopg2.connect(\n",
-    "    dbname=\"postgres\",\n",
-    "    user=\"postgres.gcruunzrtalzneyselps\",\n",
-    "    password=password,\n",
-    "    host=\"aws-0-ap-southeast-1.pooler.supabase.com\",\n",
-    "    port=\"5432\"\n",
-    ")\n",
-    "\n",
-    "# Define the name of the collection (table)\n",
-    "collection_name = \"reviews\"\n",
-    "\n",
-    "# Check if the table exists\n",
-    "cur = conn.cursor()\n",
-    "cur.execute(\"SELECT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = %s)\", (collection_name,))\n",
-    "exists = cur.fetchone()[0]\n",
-    "\n",
-    "# Print result\n",
-    "if exists:\n",
-    "    print(\"The collection exists!\")\n",
-    "else:\n",
-    "    print(\"The collection doesn't exist.\")\n",
-    "\n",
-    "# Close cursor and connection\n",
-    "cur.close()\n",
-    "conn.close()\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -199,10 +139,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews = vx.get_or_create_collection(name=\"reviews\", dimension=384)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will also watch out for the chunking using recursive text splitter"
+    "I will also watch out for the chunking using recursive text splitter\n",
+    "\n",
+    "I saw it and it is quite a easy thing to do https://python.langchain.com/v0.1/docs/modules/data_connection/document_transformers/recursive_text_splitter/#:~:text=This%20text%20splitter%20is%20the,the%20chunks%20are%20small%20enough."
    ]
   },
   {
@@ -463,6 +414,57 @@
     "        \"\\n\\n\", result_meta[\"text\"],\n",
     "        \"\\n\", \"-\" * 80\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check if the collection is already available. Done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The collection exists!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "# Establish connection to the PostgreSQL database\n",
+    "conn = psycopg2.connect(\n",
+    "    dbname=\"postgres\",\n",
+    "    user=\"postgres.gcruunzrtalzneyselps\",\n",
+    "    password=password,\n",
+    "    host=\"aws-0-ap-southeast-1.pooler.supabase.com\",\n",
+    "    port=\"5432\"\n",
+    ")\n",
+    "\n",
+    "# Define the name of the collection (table)\n",
+    "collection_name = \"reviews\"\n",
+    "\n",
+    "# Check if the table exists\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"SELECT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = %s)\", (collection_name,))\n",
+    "exists = cur.fetchone()[0]\n",
+    "\n",
+    "# Print result\n",
+    "if exists:\n",
+    "    print(\"The collection exists!\")\n",
+    "else:\n",
+    "    print(\"The collection doesn't exist.\")\n",
+    "\n",
+    "# Close cursor and connection\n",
+    "cur.close()\n",
+    "conn.close()\n"
    ]
   },
   {
